--- a/css/styles.css
+++ b/css/styles.css
@@ -1,40 +1,44 @@
-@charset "UTF-8";
+@charset "UTF=8";
 
 body{
-    max-width: 800px;
+    max-width: width 800px;
     margin:auto;
-    display: flex;
-    flex-direction: column;
+    font: size 1px;
+    font-family: serif;
+
+
 }
 
 h1{
-    font-size: 40px;
-    background-color: rgb(207, 228, 175);
-    font-family: serif;
-    text-align: center;
+    font: size 1cm;
+    font-weight: 200;
+    font-family:serif;
+    color: brown;
+    text-align: left;
+    background-color: rgba(211, 112, 160, 0.779);
+
+}
+
+h3::first-letter{
+    font-size: 2em;
+    color: rgb(198, 103, 160);
+}
+
+p{
+    color: rgb(149, 47, 165);
+    background-color: rgba(174, 116, 29, 0.071);
+    background-image:url(../img/56ADD0F5-8CAD-4E67-A8E3-6F72E9F2214D.jpeg)
 
 }
 
 h1:hover{
-    color: darkorange;
-    cursor: pointer;
+    font-size: 4em;
 }
 
-nav{
-    background-color: rgb(192, 238, 188);
-    line-height: 2em;
-}
 p:hover{
-    color: rgb(137, 156, 110);
-    
+    color:black;
 }
 
-p{
-    background-color: beige;
-    line-height: 2em;
-    font-family: serif;
-}
-
-ul{
-    background-color: rgba(85, 202, 93, 0.164);
+#top{
+    color: red;
 }
